frontend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nookpost
  labels:
    app: nookpost-frontend
spec:
  type: ClusterIP
  selector:
    app: nookpost-frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: frontend
