frontend/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nookpost-frontend
  namespace: nookpost
spec:
  hosts:
  - "nookpost-dev.jkulzer.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
